--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.0",
     "socket.io": "^4.5.4"
   },
