--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,13 +20,21 @@
   },
   "homepage": "https://github.com/dshadowexp/LastmileHandlerLite#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "config": "^3.3.9",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.8.3",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.9.0",
-    "socket.io": "^4.5.4"
+    "node": "^19.6.1",
+    "nodemailer": "^6.9.1",
+    "socket.io": "^4.5.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "jest": "^29.4.1",
