--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --watchAll"
+  },
+  "jest": {
+    "verbose": false,
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.[t|j]sx?$": "babel-jest"
+    }
   },
   "repository": {
     "type": "git",
@@ -30,6 +37,7 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^6.9.0",
+    "morgan": "^1.10.0",
     "node": "^19.6.1",
     "nodemailer": "^6.9.1",
     "socket.io": "^4.5.4",
@@ -37,7 +45,9 @@
     "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
-    "jest": "^29.4.1",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.4.3",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.3"
   }
